2007-09-04  Martin Lambers <marlam@marlam.de>

	* Update information in the AboutBox.

2007-08-31  Martin Lambers <marlam@marlam.de>

	* Initial public release.